@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -146,7 +146,6 @@
     <Compile Include="Mono.Cecil.Metadata\Param.cs" />
     <Compile Include="Mono.Cecil.Metadata\Property.cs" />
     <Compile Include="Mono.Cecil.Metadata\PropertyMap.cs" />
-    <Compile Include="Mono.Cecil.Metadata\RIdAttribute.cs" />
     <Compile Include="Mono.Cecil.Metadata\RowCollection.cs" />
     <Compile Include="Mono.Cecil.Metadata\StandAloneSig.cs" />
     <Compile Include="Mono.Cecil.Metadata\StringsHeap.cs" />
