@@ -1,5 +1,8 @@
 2006-05-18  Jb Evain  <jbevain@gmail.com>
 
+	* Mono.Cecil.Metadata/RIdAttribute.cs:
+		deleted.
+
 	* Mono.Cecil/ReflectionReader.cs
 	  Mono.Cecil/StructureReader.cs
 	  Mono.Cecil/ReflectionWriter.cs
